gcc/testsuite/algol68/compile/error-string-break-2.a68
begin puts ("hello '(U0000) world") # { dg-error "eight" }  #
end
